# 3TapLive

./: .gitmodules  Makefile  README.md  compose.yml  gitmoji.md
docs/diagram/: diagram.drawio
docs/flowchart/: create_channel.drawio  live_comment.drawio
server/: .env.sample  .gitignore  Cargo.toml  Dockerfile
server/migrations/2023-09-17-091504_tables/: down.sql  up.sql
server/src/: db.rs  main.rs  models.rs  objects.rs  schema.rs  token.rs
server/src/objects/: gql_objects.rs  mutation.rs  object.rs  query.rs  subscription.rs
token_server/: Dockerfile  go.mod  go.sum  main.go
