[package]
name = "hackz-tyranno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.75"
async-graphql = "6.0.4"
async-graphql-actix-web = "6.0.4"
async-stream = "0.3.5"
chrono = {version = "0.4.31", features = ["serde"]}
diesel = {version = "2.1.1", features = ["postgres", "r2d2", "chrono"]}
dotenv = "0.15.0"
futures-util = "0.3.28"
once_cell = "1.18.0"
reqwest = "0.11.20"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
tokio = "1.32.0"
tokio-stream = "0.1.14"
uuid = {version = "1.4.1", features = ["v4"]}
